--- a/work/okeyLib/okeyLib.vcxproj
+++ b/work/okeyLib/okeyLib.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="inc\TClass.cpp" />
     <ClCompile Include="inc\TClassManager.cpp" />
     <ClCompile Include="inc\TimeManager.cpp" />
+    <ClCompile Include="inc\ToolKit.cpp" />
     <ClCompile Include="inc\TreeNodeBase.cpp" />
     <ClCompile Include="inc\UtilID.cpp" />
     <ClCompile Include="log\Logger.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="File\FileStream.h" />
     <ClInclude Include="File\FileStream.h" />
     <ClInclude Include="inc\AnyTypeBase.h" />
+    <ClInclude Include="inc\AssocVector.h" />
     <ClInclude Include="inc\BaseClass.h" />
     <ClInclude Include="inc\BaseProcess.h" />
     <ClInclude Include="inc\BitObjectBase.h" />
@@ -180,6 +182,7 @@
     <ClInclude Include="inc\TClassManager.h" />
     <ClInclude Include="inc\TimeManager.h" />
     <ClInclude Include="inc\TList.h" />
+    <ClInclude Include="inc\ToolKit.h" />
     <ClInclude Include="inc\TreeNodeBase.h" />
     <ClInclude Include="inc\Types.h" />
     <ClInclude Include="inc\UtilID.h" />
